--- a/README
+++ b/README
@@ -1,3 +1,7 @@
+The code is this repo is very old and is here to be read and learned from. It is not maintained. 🕶
+
+- - -
+
 class Stuff
 
   class << self
